# Eterna_studio

./: .gitignore  README.md  package-lock.json  package.json  plan 2.md
apps/api/: .gitignore  README.md  pyproject.toml  requirements.txt
apps/api/app/: main.py  schema_version.py  util.py
apps/api/app/dr/: __init__.py
apps/api/app/models/: __init__.py  approval.py  digital_resident_v0_2_example.json  enums.py  export.py  layer.py  review.py  run.py  template.py  v0_3.py  v0_4.py  workflow.py
apps/api/app/registry/: __init__.py  engine_registry.py  module_catalog.py  node_registry.py  provider_registry.py  slot_catalog.py
apps/api/app/routers/: dr.py  health.py  memory.py  protocol_v0_4.py  resident.py  runtime.py  runtime_config.py  schema.py  templates.py  workflow.py
apps/api/handoff/: example.api-io.json  example.persona-builder.workflow.json  openapi.json  workflow.schema.json
apps/api/samples/: persona-demo.workflow.json  persona-full.workflow.json
apps/api/tests/: conftest.py  test_canvas_persistence_v0_4.py  test_dr_v0_2_validation_gate.py  test_execution_bridge_v0_4.py  test_module_catalog_v0_4.py  test_module_graph_persistence_v0_4.py  test_module_persistence_v0_4.py  test_protocol_v0_4_core.py  test_protocol_v0_4_engine.py  test_protocol_v0_4_migration.py  test_provider_registry.py  test_runtime_config_persistence.py  test_runtime_load_dr.py  test_stage6_11_dr_v03.py  test_stage6_2_dr_compiler.py  test_stage6_6_real_llm.py  test_stage6_7_memory.py  test_stage6_8_lattice.py  test_stage6_runtime_engine.py  test_voice_tts_v1_contract.py
(+92 files in other folders)
