[project]
name = "eterna-canvas-api"
version = "0.3.0"
description = "Eterna Canvas backend — Schema Contract v0.3 (WorkflowV03 = runtime source of truth)"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.110",
    "pydantic>=2.5",
    "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "app.models", "app.registry", "app.routers", "app.services"]
